--- a/_posts/2019-07-09-the-us-narrative-today.html
+++ b/_posts/2019-07-09-the-us-narrative-today.html
@@ -2583,107 +2583,108 @@ stories:
   domain: http://gjsentinel.com/
   link: https://www.gjsentinel.com/news/us/alaska-legislators-brace-for-showdown-over-governor-s-vetoes/image_31639a06-3bfd-58fd-8acd-0b2b6fdd744c.html
 images:
-- name: stories-internet-gauages-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-internet-gauages-3.jpg
-- name: christianity-christianity-under-construction-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-hot-spicy.jpg
-- name: machine-road-machine-road-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-satan-red.jpg
-- name: border-crossing-bordercrossing-purp-paper.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purp-paper.png
-- name: border-fence-border-fence-on-hill-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dark-dali.jpg
-- name: crow_light_dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_light_dali.jpg
-- name: status-berlin-status-berlin-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-monet-one.jpg
-- name: eduardo-eduardo-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-colorful-blocks.jpg
-- name: oldhousecars-house-old-cars-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crafty-painting.jpg
-- name: old-door-lock-old-door-lock-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-gred-mash.jpg
-- name: oldsmallboat-oldsmallboat-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-umberto-bocc.jpg
-- name: lincoln-memorial-lincolnmemorial-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-internet-numbers.jpg
-- name: bluelake-green-zuma-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-00-38-67.jpg
-- name: aws-s3-stories-36349140070-d5ec39cb34-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-36349140070-d5ec39cb34-z.jpg
-- name: old-door-lock-old-door-lock-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-marcel-duchamp.jpg
-- name: fence-mexico-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-spagetti-accident.jpg
-- name: old-door-lock-old-door-lock-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-satan-red.jpg
-- name: containership-containership-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-colorful-dream.jpg
-- name: udnie-DSC_0109.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0109.jpg
-- name: dragon-desert-desert-dragon-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-smoking-cigarette.jpg
-- name: blossombar-smooth-ride-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-smooth-ride-file-00-00-00-00.jpg
-- name: machine-road-machine-road-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-green-zuma.jpg
-- name: gypsymosaic-gypsy-eyes-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-colored-circuits.jpg
-- name: gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
-- name: stories-DSC-0084-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-DSC-0084-dali-three.jpg
-- name: oldcabin-oldcabin-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crunch-paper.jpg
-- name: christianity-christianity-under-construction-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-wols.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-hot-spicy.jpg
-- name: beach-clouds-lifeguard-beachclouds-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-deep-connections.jpg
-- name: rockingchair-rockingchair-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-neo-instinct.jpg
-- name: castle-wall-DSC-0067-feed-people.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-feed-people.JPG
-- name: aws-s3-canyon-canyon-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-purple-storm.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-purple-storm.JPG
-- name: oldbarn-oldbarn-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-far-away.jpg
-- name: stories-servers-hallway-door.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-servers-hallway-door.jpg
-- name: status-berlin-status-berlin-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-marcel-duchamp.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-atari-asteroids.jpg
-- name: oldcabin-oldcabin-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-space-pizza.jpg
-- name: berlinwall-DSC-0084-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-emily-carr.jpg
-- name: beach-rocks-beach-rocks-currents-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-space-pizza.jpg
-- name: old-door-lock-old-door-lock-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-alberto-giacometti.jpg
-- name: oldhotel-oldhotel-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-kandinsky-bv.jpg
-- name: store-on-corner-store-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-aqua.jpg
-- name: aws-s3-stories-beach-rocks-currents-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beach-rocks-currents-blue-circuit-5.jpg
-- name: birdhouse-birdhouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-umberto-bocc.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-free-woman.jpg
-- name: white-house-whitehouse-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-wols.jpg
-- name: window-window-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-aqua.jpg
-- name: hollywood-building-hollywood-building-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-atari-missle.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-matrix.jpg
-- name: old-house-oldhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-brush.jpg
+- name: death-valley-death-valley-national-park-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-constitution.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-colored-circuits.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colored-circuits.JPG
+- name: christianity-christianity-under-construction-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-circuit-5.jpg
+- name: christianity-christianity-under-construction-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-smooth-ride.jpg
+- name: downtown-trucksilo-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-internet-numbers.jpg
+- name: yosemite-yosemite-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dali-two.jpg
+- name: old-door-lock-old-door-lock-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-post-modern.jpg
+- name: cargo-ship-cargo-ship-on-sea-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-post-modern.jpg
+- name: windowmountain-window-mountain-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-spagetti-accident.jpg
+- name: window-window-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-ww2-dresden.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
+- name: school-clouds-church-clouds-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-plentiful.jpg
+- name: oldhousecars-house-old-cars-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-constitution.jpg
+- name: oldcabin-store-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dry-skin.jpg
+- name: adam-smith-adam-smith-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-horiz-circuit.jpg
+- name: oldhotel-oldhotel-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-bright-sand.jpg
+- name: old-door-lock-old-door-lock-2-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-brush.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+- name: file-00-00-18-35 3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-18-35
+    3.jpg
+- name: wind-mills-windmills-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dark-rain.jpg
+- name: catacombs-catacombs-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dark-soul.jpg
+- name: locked-up-steam-lock-up-steam-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dry-skin.jpg
+- name: supreme-court-supremecourt-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-blue-brush.jpg
+- name: berlinwall-DSC-0084-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-sand-paper.jpg
+- name: art-museum-art-museum-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-gan-vogh.jpg
+- name: store-on-corner-oldcabin-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-two.jpg
+- name: crow_matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_matrix.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-gan-vogh.jpg
+- name: flower-barbed-wire-flower-barbed-wire-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-pablo-blue.jpg
+- name: white-house-whitehouse-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-kand-two.jpg
+- name: christianity-christianity-under-construction-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-colorful-dream.jpg
+- name: aws-s3-square-status-berlin-propaganda-leaflets-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-status-berlin-propaganda-leaflets-square.jpg
+- name: bluelake-gred-mash-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-38-67.jpg
+- name: birdhouse-birdhouse-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-purple-pond.jpg
+- name: crow-crow-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-purp-paper.jpg
+- name: fence-fence-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-space-pizza.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-copper-circuit.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-spagetti-accident.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-green-zuma.jpg
+- name: castle-wall-DSC-0067-blue-electricity.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-electricity.JPG
+- name: redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
+- name: hollywood-building-hollywood-building-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-brush.jpg
+- name: statue-of-liberty-front-view-statueofliberty-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sunday.jpg
+- name: bordercrossing-bordercrossing-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-ww2-dresden.jpg
+- name: stories-redes-fast-flux-623x425-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-redes-fast-flux-623x425-blue-electricity.jpg
+- name: crow-crow-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-green-zuma.jpg
+- name: beach-rocks-beach-rocks-currents-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-5.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dry-skin.jpg
+- name: fence-fence-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dry-skin.jpg
+- name: udnie-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0033.jpg
+- name: amusement-park-amusement-park-2-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-wols.jpg
 ---
 Census citizen Query Blocked, But Trump Fights On.&nbsp;Mobile Home Residents Hit With Soaring Rent After Hurricanes.&nbsp;Breaking Down Epstein's Sweetheart Deal.&nbsp;California Military Base Still Closed Following Big Quakes.&nbsp;Extended Protective Netting Ballpark By Ballpark Decision.&nbsp;Camden Wrestlers Advance To State Meet.&nbsp;Deputy Convicted Of Punching Man And Falsifying Report.&nbsp;Louisville Basketball Holds Breath Amidst Possible Allegations.&nbsp;
